--- a/eu_distance.ipynb
+++ b/eu_distance.ipynb
@@ -2,6 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: flask in /home/fatima/.local/lib/python3.8/site-packages (3.0.2)\n",
+      "Collecting scipy\n",
+      "  Downloading scipy-1.10.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.5 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.5/34.5 MB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: Werkzeug>=3.0.0 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (3.0.1)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (3.1.3)\n",
+      "Requirement already satisfied: itsdangerous>=2.1.2 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (2.1.2)\n",
+      "Requirement already satisfied: click>=8.1.3 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (8.1.7)\n",
+      "Requirement already satisfied: blinker>=1.6.2 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (1.7.0)\n",
+      "Requirement already satisfied: importlib-metadata>=3.6.0 in /home/fatima/.local/lib/python3.8/site-packages (from flask) (7.0.1)\n",
+      "Collecting numpy<1.27.0,>=1.19.5 (from scipy)\n",
+      "  Downloading numpy-1.24.4-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (5.6 kB)\n",
+      "Requirement already satisfied: zipp>=0.5 in /home/fatima/.local/lib/python3.8/site-packages (from importlib-metadata>=3.6.0->flask) (3.17.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /home/fatima/.local/lib/python3.8/site-packages (from Jinja2>=3.1.2->flask) (2.1.4)\n",
+      "Downloading numpy-1.24.4-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (17.3 MB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m17.3/17.3 MB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: numpy, scipy\n",
+      "Successfully installed numpy-1.24.4 scipy-1.10.1\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.3.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3 -m pip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install flask scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -9,10 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app '__main__' (lazy loading)\n",
-      " * Environment: production\n",
-      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
-      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
+      " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
     },
@@ -20,17 +55,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [06/Jun/2023 20:07:12] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Jun/2023 20:07:12] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [06/Jun/2023 20:07:14] \"POST /get HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Jun/2023 20:07:18] \"POST /get HTTP/1.1\" 200 -\n"
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [10/Feb/2024 16:40:25] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [10/Feb/2024 16:40:25] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [10/Feb/2024 16:40:30] \"POST /get HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
     "\n",
     "from flask import Flask, request, render_template\n",
+    "import scipy\n",
     "from scipy.spatial import distance\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -128,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
